--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
     <style>
-        h1 { color: blue; }
+        h1 { color: green; }
     </style>
 </head>
 <h1>Welcome to my site</h1>
